# app-store-connect-mcp

./: .env.example  .gitattributes  .gitignore  .mcp.json  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  server.json
.github/workflows/: release.yml  test.yml
scripts/: generate_models.py  update_version.py  validate_server_json.py
src/app_store_connect_mcp/: __init__.py  cli.py  config.py  server.py
src/app_store_connect_mcp/clients/: app_store_connect.py  http_client.py
src/app_store_connect_mcp/core/: base_handler.py  container.py  errors.py  filters.py  pagination.py  protocols.py  query_builder.py  response_handler.py
src/app_store_connect_mcp/domains/analytics/: api_reports.py  api_requests.py  api_segments.py  data_downloader.py  handlers.py
src/app_store_connect_mcp/domains/app/: handlers.py
src/app_store_connect_mcp/domains/testflight/: handlers.py  schemas.py
src/app_store_connect_mcp/domains/users/: api_users.py  handlers.py
src/app_store_connect_mcp/domains/xcode_cloud/: __init__.py  api_builds.py  api_products.py  api_scm.py  constants.py  handlers.py
src/app_store_connect_mcp/utils/: parsers.py
tests/: mocks.py  test_analytics_downloader.py  test_architecture.py  test_container.py  test_core_abstractions.py  test_domain_logic.py  test_pagination.py  test_pagination_error_handling.py  test_parsers.py  test_protocols.py  test_xcode_cloud_helpers.py
